--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.css
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.css
@@ -1,1 +1,755 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #eee;
+  height: auto;
+  width: 100vw;
+}
+
+.dark-mode {
+  background: invert(1);
+  color: invert(1);
+}
+
+#landing {
+  padding-top: 1.5rem;
+  width: 100vw;
+  height: 100%;
+  margin: auto;
+  background-color: #f0f0f2;
+}
+
+#landing__dailytaskslist {
+  padding-top: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#landing__dailytaskslist .list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  border-bottom: 0.5px solid rgba(96, 94, 94, 0.68);
+}
+
+#landing__dailytaskslist .list__line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#landing__dailytaskslist .list__line .box-logo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #f5c46a;
+}
+
+#landing__dailytaskslist .list__line .box-logo i {
+  margin-left: 12px;
+  margin-top: 12px;
+}
+
+#landing__dailytaskslist .list__line .box-log-blue {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #a7dbec;
+}
+
+#landing__dailytaskslist .list__line .box-log-blue h1 {
+  margin-top: 12px;
+  margin-left: 12px;
+  font-weight: 700;
+  font-size: 15px;
+}
+
+#landing__dailytaskslist .list__line .logo {
+  font-weight: 700;
+}
+
+#landing__dailytaskslist .list__line p {
+  padding: 1.5rem;
+}
+
+#landing__dailytasksdone {
+  padding-top: 4vh;
+  margin: auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (80px)[5];
+      grid-template-columns: repeat(5, 80px);
+  -ms-grid-rows: 100px, 200px, 100px;
+      grid-template-rows: 100px, 200px, 100px;
+  gap: 10px;
+}
+
+#landing__dailytasksdone .box1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+
+#landing__dailytasksdone .box2 {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 2;
+  grid-column: 4/6;
+  font-weight: 550;
+  text-align: right;
+}
+
+#landing__dailytasksdone .box3 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 5;
+  grid-column: 1/6;
+}
+
+#landing__dailytasksdone .box3 img {
+  width: 100%;
+}
+
+#landing__dailytasksdone .box {
+  border: 2px solid black;
+  border-radius: 15px;
+  padding: 20px;
+  text-align: center;
+}
+
+#landing__dailytasksdone .box:hover {
+  background-color: rgba(0, 0, 0, 0.837);
+  cursor: pointer;
+}
+
+#landing__dailytasksdone .box p {
+  margin: 0;
+  font-weight: 500;
+}
+
+#landing__dailytasksdone .box p:hover {
+  color: white;
+}
+
+#landing-home {
+  height: 100vh;
+  background: white;
+  padding: 30px;
+}
+
+#landing-home__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#landing-home__logo img {
+  height: 60px;
+  width: 60px;
+  border-radius: 10px;
+  margin-left: 50px;
+  margin-top: 20px;
+}
+
+#landing-home__logo h1 {
+  font-weight: 700;
+}
+
+#landing-home__logo span {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+#landing-home__search {
+  text-align: center;
+}
+
+#landing-home__search input {
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 25px;
+  border-radius: 7px;
+  height: 45px;
+}
+
+#landing-home__task {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#landing-home__task .left {
+  margin-right: auto;
+  margin-left: 1rem;
+  font-weight: 600;
+}
+
+#landing-home__task p {
+  margin-top: auto;
+}
+
+#landing-home__task span {
+  font-weight: 900;
+}
+
+#landing-home__task .task {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#landing-home__task .icon {
+  margin-top: 15px;
+  height: 50px;
+  width: 50px;
+  border-radius: 5px;
+}
+
+#landing-home__task .icon__1 {
+  background-color: #ffc898;
+}
+
+#landing-home__task .icon__2 {
+  background-color: #aaeffa;
+}
+
+#landing-home__task .icon__3 {
+  background-color: #f4ff7f;
+}
+
+#landing-home__task .icon i {
+  margin-left: 13px;
+  margin-top: 13px;
+}
+
+#landing-home .recent__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#landing__task {
+  overflow-y: hidden;
+}
+
+#landing__task-count {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  max-width: 100vw;
+  background: #f0f0f2;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  overflow-y: scroll;
+  list-style: none;
+}
+
+#landing__task-count:nth-child(1) {
+  margin-left: 1.5rem;
+}
+
+@media only screen and (min-width: 600px) {
+  #landing__task-count {
+    max-width: 100%;
+    padding-top: 3rem;
+  }
+}
+
+#landing__task-count .box {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  font-family: "Poppins", sans-serif;
+  text-transform: capitalize;
+  background: white;
+  border-radius: 0.5rem;
+  padding: 0rem 0rem 1rem 1.5rem;
+  min-width: 18ch;
+  height: auto;
+  margin: 0.8rem;
+  height: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#landing__task-count .box__home1 {
+  background-color: #ff98e09a;
+}
+
+#landing__task-count .box__home2 {
+  background-color: #aaeffa;
+}
+
+#landing__task-count .box__home3 {
+  background-color: #f4ff7f;
+}
+
+#landing__task-count .box__flex {
+  -ms-flex-line-pack: distribute;
+      align-content: space-around;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0;
+  padding: 0;
+  line-height: 0.1ch;
+}
+
+#landing__task-count .box__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#landing__task-count .box__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  line-height: 1.5rem;
+}
+
+#landing__task-count .box__title-text {
+  margin-top: 1.5rem;
+  margin-bottom: 0;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+#landing__task-count .box__title-urg {
+  opacity: 50%;
+  margin-bottom: 0;
+  margin-top: 0.5ch;
+  font-size: 0.8rem;
+  font-weight: 200;
+}
+
+#landing__task-count .box__logo {
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+#landing__task-count .box__logo-square {
+  width: 3ch;
+  height: 3ch;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  text-align: center;
+  margin-top: 1.5rem;
+  margin-right: 1.5rem;
+  padding: 0.7rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+#landing__task-count .box__expln {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  line-height: 1.5rem;
+}
+
+#landing__task-count .box__expln h4 {
+  margin-top: 1.5rem;
+  margin-bottom: 0;
+  font-weight: 600 bold;
+  font-size: 1.1rem;
+}
+
+#landing__task-count .box__expln-transp {
+  opacity: 30%;
+  margin-bottom: 0;
+  margin-top: 0.5ch;
+}
+
+#landing__task__descr {
+  border: 2px solid rgba(128, 128, 128, 0.4);
+  border-radius: 5px;
+  max-width: 100vw;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1.5rem;
+  margin: 2rem;
+  background-color: #f0f0f2;
+}
+
+#landing__task__descr:hover {
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 600px) {
+  #landing__task__descr {
+    max-width: 100%;
+  }
+}
+
+#landing__task__descr__text {
+  text-shadow: 0.1rem 0.18rem rgba(0, 0, 0, 0.2);
+  padding-inline: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+#landing__task__descr__text > h3,
+#landing__task__descr__text p {
+  margin: 0.1rem;
+  padding: 0;
+}
+
+#landing__task__cal {
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 62.5%;
+  max-width: 100vw;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  color: #141414;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-transform: capitalize;
+  margin: 1.5rem;
+}
+
+#landing__task__cal__flex {
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  width: 90vw;
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+  height: 35vw;
+  min-height: 20vh;
+  background-color: white;
+  border-radius: 2rem;
+  padding: 2vw 0rem 5vw 0rem;
+  -webkit-box-shadow: 0.5 rem 3rem rgba(0, 0, 0, 0.4);
+          box-shadow: 0.5 rem 3rem rgba(0, 0, 0, 0.4);
+}
+
+@media only screen and (min-width: 600px) {
+  #landing__task__cal__flex {
+    min-height: 25vw;
+    height: 30vw;
+  }
+}
+
+#landing__task__cal__title {
+  height: 6rem;
+  width: 100vw;
+  margin: 0 1vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  text-shadow: 0.15rem 0.25rem rgba(0, 0, 0, 0.2);
+}
+
+#landing__task__cal__title i {
+  font-size: 1.25rem;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: 1.5rem;
+}
+
+#landing__task__cal__title h1 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  letter-spacing: 0.1rem;
+  padding: 0;
+}
+
+#landing__task__cal__title svg {
+  margin: 1.5rem;
+}
+
+#landing__task__cal__weekdays {
+  width: 90vw;
+  height: 2.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 5vw;
+  border-bottom: 0.1px dotted #f0f0f2;
+}
+
+#landing__task__cal__weekdays div {
+  font-size: 0.75rem;
+  font-weight: 600;
+  letter-spacing: 0.5vw;
+  width: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+  margin: auto;
+}
+
+#landing__task__cal__days {
+  width: 90vw;
+  height: 3vw;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[7];
+      grid-template-columns: repeat(7, 1fr);
+  -ms-grid-rows: (7vw)[2];
+      grid-template-rows: repeat(2, 7vw);
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-gap: 5vw;
+  padding-left: auto;
+  margin: auto;
+  font-size: 0.75rem;
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+}
+
+@media only screen and (min-width: 600px) {
+  #landing__task__cal__days {
+    padding: 0 2vw;
+    -ms-grid-columns: (8vw)[7];
+        grid-template-columns: repeat(7, 8vw);
+  }
+}
+
+#landing__task__cal__days div {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  line-height: 3vh;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 2vw;
+  border-radius: 0.25rem;
+}
+
+#landing__task__cal__days div:hover {
+  cursor: pointer;
+}
+
+#landing__task__cal__days div:hover:not(.today) {
+  background-color: #918d8d;
+  font-weight: bolder;
+}
+
+#landing__task__cal__days .prev-date,
+#landing__task__cal__days .next-date {
+  opacity: 0.5;
+}
+
+#landing__task__cal__days .assigned {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1.5vw;
+  -webkit-column-gap: 0;
+          column-gap: 0;
+  text-align: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#landing__task__cal__days .assigned p {
+  line-height: 1.5vh;
+}
+
+#landing__task__cal__days .today {
+  font-weight: bolder;
+  color: white;
+  background-color: #141414;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1.5vw;
+}
+
+.iconify {
+  padding: 0;
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 100vw;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
+  background-color: #f0f0f2;
+}
+
+.transparent {
+  background-color: none;
+}
+
+.blue {
+  background-color: #a7ebf2;
+}
+
+.orange {
+  background-color: #f2b694;
+}
+
+.green {
+  background-color: #79d19e;
+}
+
+.white {
+  background-color: white;
+}
+
+.black {
+  background-color: black;
+}
+
+.black > p {
+  color: white;
+}
+
+.md-18 {
+  font-size: 18px;
+}
+
+.md-24 {
+  font-size: 24px;
+}
+
+.md-30 {
+  font-size: 30px;
+}
+
+.md-36 {
+  font-size: 36px;
+}
+
+.md-40 {
+  font-size: 40px;
+}
+/*# sourceMappingURL=style.css.map */
