--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
@@ -1,11 +1,11 @@
 .gauge {
   width: 100%;
   max-width: 350px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   &__body {
     width:100%;
     height: 350px;
-    //border: 1px solid red;
     position: relative;
     border-radius:50%;
    overflow: hidden;
@@ -25,11 +25,18 @@
    &__cover1 {
      width:75%;
      height:75%;
-     background: white;
+     background: rgb(255, 255, 255);
      border-radius: 50%;
      position:absolute;
      top:12.5%;
      left:12.5%;
+     display:flex;
+     align-items: center;
+     justify-content: center;
+     font-size: 50px;
+      .span {
+        size: 20px;
+      }
    }
 
    &__cover2 {
