--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -72,44 +72,46 @@ body {
                     grid-column: 1;
                     display: grid;
                     gap: 1px;
-                    grid-template-rows: 0.1fr 0.1fr;
-                    grid-template-columns: 0.5fr 3fr 3fr;
+                    grid-template-rows: 3fr;
+                    grid-template-columns:3fr 3fr;
 
-                    &--text {
-
+                    &__text {
+                        display: grid;
+                        grid-template-columns: 1fr;
+                        grid-template-rows: 0.1fr 0.5fr;
                         grid-row: 1;
-                        grid-column: 2;
-
+                       
+                        &--text{
+                                grid-row: 1;
+                        grid-column: 2; 
                         h2 {
-
+                       
                             color: white;
                         }
                     }
 
                     &--city {
                         // margin-top: auto;
-                        grid-row: 1;
-                        display: grid;
-                        grid-template-columns: 1fr;
-                        grid-template-rows: 0.6fr 1fr;
-                        width: 88px;
+                        grid-row: 2;
+                       grid-column: 2;
+                    
+                        
 
                         h6 {
                             color: white;
                             font-size: 20px;
                         }
-
+                    }
+                    &--state{
                         grid-row: 2;
                         grid-column: 2;
 
                         p {
-                            grid-row: 2;
-                            grid-column: 1;
 
                             font-size: 20px;
                             color: #3d5564;
                         }
-                    }
+                   }
 
                     i {
                         grid-column: 4;
@@ -124,11 +126,11 @@ body {
                         }
                     }
 
-
+}
                     &--bigIcon {
-                        margin-right: auto;
-                        grid-column: 3;
-                        grid-row: 2;
+                       margin: auto;
+                        grid-column: 5;
+                        grid-row: 1;
 
                         .fa-gradient {
                             font-size: 5em;
@@ -445,13 +447,6 @@ body {
                             }
                         }
 
-                        .fa-cloud-sun {
-                            grid-column: 6;
-                            grid-row: 2;
-                            width: 100px;
-                            height: 100px;
-                        }
-
                         .fa-circle {
                             animation-name: sun;
                             animation-duration: 3s;
@@ -516,12 +511,14 @@ body {
                     }
                 }
                     &__down {
+                        
                         margin: auto;
                         display: grid;
-                        grid-template-rows: 1fr;
+                        grid-template-rows: 1fr 1fr;
                         grid-template-columns: 3fr 3fr;
                         &--smalIconsLeft {
                            grid-column: 1;
+                           grid-row: 2;
                             .fa-tint {
                                 animation-name: tint;
                                 animation-duration: 2s;
@@ -558,6 +555,7 @@ body {
 
                         &--smalIconsRight {
                             grid-column: 2;
+                            grid-row: 2;
                             .fa-wind {
                                 color: #436081;
                                 width: 25px;
@@ -892,17 +890,21 @@ body {
                         &__up {
                             
                             grid-row: 1;
-                            grid-column: 1;
-                            display: grid;
-                            gap: 1px;
-                            grid-template-rows: 0.1fr 0.1fr 0.1fr;
-                            grid-template-columns: 2fr 3fr;
-        
-                            &--text {
-                                
+                    grid-column: 1;
+                    display: grid;
+                    gap: 1px;
+                    grid-template-rows: 3fr;
+                    grid-template-columns:3fr 3fr;
+                            &__text {
+                                margin: auto;
+                                display: grid;
+                                grid-template-columns: 1fr;
+                                grid-template-rows: 0.5fr 0.5fr;
                                 grid-row: 1;
-                                grid-column: 1;
-        
+                                
+                                &--text{
+                                    grid-row: 1;
+                                    grid-column: 1;    
                                 h2 {
                                     margin-left: auto;
                                     font-size: 20px;
@@ -912,6 +914,7 @@ body {
         
                             &--city {
                                 // margin: auto;
+                                grid-column: 1;
                                 grid-row: 1;
                                 display: grid;
                                 grid-template-columns: 1fr;
@@ -924,11 +927,11 @@ body {
                                     grid-row: 1;
                                 }
         
-                               
-        
-                                p {
-                                    grid-row: 2 / -1;
+                               }
+                                &--state{
+                                    grid-row: 2;
                                     grid-column: 1;
+                                p {
         
                                     font-size: 16px;
                                     color: #3d5564;
@@ -947,8 +950,8 @@ body {
                                     font-family: 'Roboto', sans-serif;
                                 }
                             }
-        
-        
+                        }
+                        
                             &--bigIcon {
                                 margin: auto;
                                 grid-column: 2;
@@ -1299,13 +1302,15 @@ body {
                                         transform: scale(0.7);
                                     }
                                 }
+                                
                                 .rainy {
                                     display: grid;
                                     grid-template-columns: repeat(5, 1fr);
-                                    max-width: 10px;
-                                    grid-row: 2;
+                                    grid-row: 1;
                                     gap: 5px;
                                     grid-column: 1;
+                                    grid-template-rows: 1fr;
+                                    // margin-left: -50px;
         
                                     .rain {
                                         background-color: #5f95fc;
@@ -1339,7 +1344,7 @@ body {
                             }
                         }
                             &__down {
-                                grid-row: 3;
+                                grid-row: 2;
                                 margin-top: auto;
                                 display: grid;
                                 grid-template-rows: 2fr;
