--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.css
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.css
@@ -1,19 +1,47 @@
 body {
     background-color: #030203;
-    font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    ;
     color: white;
 }
 
 .TopBox {
+    padding-left: 20px;
+    padding-bottom: 20px;
+    padding-top: 5px;
     margin-top: 20%;
     margin-left: 5%;
     margin-right: 5%;
-    height: 170px;
+    height: 160px;
     background-color: #9966cc;
     background-image: linear-gradient(to left, #9966cc, #cca1f0);
     box-shadow: 0px 0px 1px 1px #cca1f0;
     border-radius: 15px;
+}
 
+.container {
+    height: 6px;
+    width: 50%;
+    background-color: black;
+    position: relative;
+    border-radius: 4px;
+}
+
+.container .progressBar {
+    position: absolute;
+    height: 100%;
+    background-color: orange;
+    animation: progress-animation 3s forwards;
+    border-radius: 4px;
+}
+
+@keyframes progress-animation {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 70%;
+    }
 }
 
 .Box {
@@ -24,7 +52,6 @@ body {
     background-color: #2a2727;
     border-radius: 15px;
     box-shadow: 0px 0px 0px 1px #888888;
-
 }
 
 .BoxOptions {
@@ -35,17 +62,22 @@ body {
     height: 50px;
     width: 85%;
     background-color: #030203;
-    border-radius: 5px;    
-    
-    
-}
-.BoxOptions>img{
-width: 24px;
-height: 24px;
-display: block;
-margin-left: 15px;
-  margin-right: auto;
-  margin-top: auto;
-  margin-bottom: auto;
+    border-radius: 5px;
 }
 
+.BoxOptions>p {
+    margin-right: 40px;
+}
+
+.BoxOptions>img {
+    width: 24px;
+    height: 24px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#arrow {
+    margin-left: 48px;
+}
