--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -667,6 +667,11 @@ body {
     h3 {
         opacity: 0.9;
         margin-bottom: 0px;
+        a{
+            text-decoration:none;
+            color: rgba(0, 0, 0, 0.774);
+
+        }
 
     }
 
